<resources>
    <string name="app_name">Pokémon Finder</string>
    <string name="msg_title_pokemon">Pokémon</string>
    <string name="msg_name_pokemon">Name</string>
    <string name="msg_home_letsgo">Let\'s go!</string>
    <string name="msg_register_title">Let\'s meet each other firs?</string>
    <string name="msg_register_name">First we need to know your name..</string>
    <string name="msg_select_gretting">Hello, trainer Dev!</string>
    <string name="msg_select_favorite">...now tell us wich is your favorite Pokémon type:</string>
    <string name="action_search">Search</string>
    <string name="title_loading">Loading</string>
</resources>
