<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">

    <TextView
            android:id="@+id/txt_title"
            style="@style/text_white_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_32dp"
            android:layout_marginRight="@dimen/margin_32dp"
            android:layout_marginTop="90dp"
            android:text="@string/msg_register_title"/>

    <TextView
            android:id="@+id/txt_name"
            style="@style/text_white_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_32dp"
            android:layout_marginRight="@dimen/margin_32dp"
            android:layout_centerVertical="true"
            android:text="@string/msg_register_name"/>

    <EditText
            android:id="@+id/edt_name"
            style="@style/edt_default_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginTop="@dimen/margin_32dp"
            android:layout_marginLeft="@dimen/margin_32dp"
            android:layout_marginRight="@dimen/margin_32dp"
            android:labelFor="@+id/txt_name"
            android:layout_below="@+id/txt_name" android:singleLine="false"/>

    <ImageView
            android:id="@+id/img_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:background="@drawable/next"
            android:contentDescription="@string/app_name"/>

</RelativeLayout>